WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199733
A newly inserted element doesn't get assigned to a named slot if slot assignments had already happened
https://bugs.webkit.org/show_bug.cgi?id=199733
Summary
A newly inserted element doesn't get assigned to a named slot if slot assignm...
Tim Guan-tin Chien [:timdream]
Reported
2019-07-11 16:18:52 PDT
Created
attachment 373973
[details]
test.html STR: See test case. There is a while loop does the following twice. 1) append an element to the host and assign a slot name. The slot name is different on each run. 2) create a named slot and append it to the shadow root. 3) assert that the element created is assigned to the slot. 4) remove the element 5) remove the slot Expected: The element should be assigned to the slot correctly on both run. Actual: On the second run the element is not assigned to the slot.
Attachments
test.html
(587 bytes, text/html)
2019-07-11 16:18 PDT
,
Tim Guan-tin Chien [:timdream]
no flags
Details
test2.html
(591 bytes, text/html)
2019-07-11 17:19 PDT
,
Tim Guan-tin Chien [:timdream]
no flags
Details
test3-workaround.html
(972 bytes, text/html)
2019-07-12 10:08 PDT
,
Tim Guan-tin Chien [:timdream]
no flags
Details
Fixes the bug
(7.98 KB, patch)
2019-10-03 23:26 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-07-11 16:56:47 PDT
<
rdar://problem/52979943
>
Tim Guan-tin Chien [:timdream]
Comment 2
2019-07-11 17:19:17 PDT
Created
attachment 373978
[details]
test2.html The 2nd named slot is also broken without step 4 and 5.
Tim Guan-tin Chien [:timdream]
Comment 3
2019-07-12 10:08:05 PDT
Created
attachment 374018
[details]
test3-workaround.html Apparently removing and re-inserting the element can wake it up.
Ryosuke Niwa
Comment 4
2019-10-03 23:26:31 PDT
Created
attachment 380190
[details]
Fixes the bug
Ryosuke Niwa
Comment 5
2019-10-04 00:23:56 PDT
Comment on
attachment 380190
[details]
Fixes the bug Thanks for the reviews!
Ryosuke Niwa
Comment 6
2019-10-04 00:37:52 PDT
Comment on
attachment 380190
[details]
Fixes the bug Clearing flags on attachment: 380190 Committed
r250709
: <
https://trac.webkit.org/changeset/250709
>
Ryosuke Niwa
Comment 7
2019-10-04 00:37:53 PDT
All reviewed patches have been landed. Closing bug.
Ryosuke Niwa
Comment 8
2019-10-04 22:03:55 PDT
***
Bug 196347
has been marked as a duplicate of this bug. ***
Ryosuke Niwa
Comment 9
2019-11-25 14:06:12 PST
***
Bug 204559
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug