A newly inserted element doesn't get assigned to a named slot if slot assignments had already happened https://bugs.webkit.org/show_bug.cgi?id=199733

Reviewed by Antti Koivisto.

Source/WebCore:

The bug was caused by addSlotElementByName not invalidating slot assignments when a new slot element
is inserted after corresponding elements with the slot content attribute had already been inserted.

Fixed the bug by always invalidating the slot assignment when a new slot element is inserted.

Tests: fast/shadow-dom/add-slotted-element-after-assignment-1.html
       fast/shadow-dom/add-slotted-element-after-assignment-2.html
       fast/shadow-dom/add-slotted-element-after-assignment-3.html

* dom/SlotAssignment.cpp:
(WebCore::SlotAssignment::addSlotElementByName):

LayoutTests:

Added ref tests.

* fast/shadow-dom/add-slotted-element-after-assignment-1-expected.html: Added.
* fast/shadow-dom/add-slotted-element-after-assignment-1.html: Added.
* fast/shadow-dom/add-slotted-element-after-assignment-2-expected.html: Added.
* fast/shadow-dom/add-slotted-element-after-assignment-2.html: Added.
* fast/shadow-dom/add-slotted-element-after-assignment-3-expected.html: Added.
* fast/shadow-dom/add-slotted-element-after-assignment-3.html: Added.


Canonical link: https://commits.webkit.org/216046@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250709 268f45cc-cd09-0410-ab3c-d52691b4dbfc